# Q4_2025_Accelerated_MahmoudFathy

./: Anchor.toml  README.md  package.json
accel-pinocchio-escrow/src/: lib.rs
accel-pinocchio-escrow/src/instructions/: make.rs  take.rs
accel-pinocchio-escrow/src/state/: escrow.rs
accel-pinocchio-escrow/src/tests/: mod.rs
pinocchio-fundraiser/: Cargo.toml
pinocchio-fundraiser/src/: lib.rs
pinocchio-fundraiser/src/instructions/: check_contributions.rs  contribute.rs  mod.rs  refund.rs
pinocchio-fundraiser/src/tests/: mod.rs
programs/test/: Cargo.toml
programs/test/src/tests/: mod.rs
programs/tokenextensions-whitelist/: Cargo.toml
programs/tokenextensions-whitelist/src/: lib.rs
programs/tokenextensions-whitelist/src/instructions/: init_extra_account_meta.rs  initialize_whitelist.rs  mod.rs  transfer_hook.rs  whitelist_operations.rs
programs/transfer-hook-vault-litesvm/: Cargo.toml
programs/transfer-hook-vault-litesvm/src/: lib.rs
programs/transfer-hook-vault-litesvm/src/instructions/: init_extra_account_meta.rs  mint_token.rs  mod.rs  transfer_hook.rs  whitelist_operations.rs
programs/transfer-hook-vault-litesvm/src/states/: mod.rs
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
programs/vault/src/instructions/: deposit.rs  init.rs  mod.rs  withdraw.rs
src/: lib.rs
src/instructions/: initialize.rs  mod.rs
src/state/: contributor.rs  escrow.rs  fundraiser.rs  mod.rs
src/tests/: mod.rs
tests/: tokenextensions-whitelist.ts
tokenextensions-whitelist/: Anchor.toml
tokenextensions-whitelist/programs/tokenextensions-whitelist/: Cargo.toml
transfer-hook-vault-litesvm/: Anchor.toml
transfer-hook-vault-litesvm/programs/test/: Cargo.toml
week1-challenge-transfer-hook/programs/test/: Cargo.toml
week1-challenge-transfer-hook/tests/: transfer-hook-vault-litesvm.ts
(+18 files in other folders)
