[package]
name = "test"
version = "0.1.0"
description = "Created with Cargo"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1" }
anchor-spl = "0.31.1"
transfer-hook-vault-litesvm = {path = "../transfer-hook-vault-litesvm/"}
vault = {path = "../vault/"}


[dev-dependencies]
litesvm = "0.7.1"
litesvm-token = "0.7.1"

solana-account-info = "2.2.1"
solana-keypair = "2.2.1"
solana-sdk = "2.2"
solana-address = "1.0.0"
solana-program-pack = "2.2.1"

spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"]}

